--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                         Launch APP
                     </a>
                 </div>
-            </section> 
+            </section>
             <section class="main__about about">
                 <div class="container">
                     <h2 class="about__title title">
@@ -790,7 +790,7 @@
                         </div>
                     </div>
                 </div>
-            </section> 
+            </section>
             <section class="main__service service">
                 <div class="container">
                     <h2 class="service__title title">
@@ -800,7 +800,236 @@
                         <img class="service__img-image" src="images/service-img.png" alt="img">
                     </div>
                 </div>
-            </section> 
+            </section>
+            <section class="main__info info">
+                <div class="container">
+                    <div class="info__inner">
+                        <div class="info__wrapper">
+                            <div class="info__item info-item">
+                                <p class="info-item__count">
+                                    1
+                                </p>
+                                <p class="info-item__text">
+                                    Q3 2023
+                                </p>
+                                <ul class="info-item__list">
+                                    <li class="info-item__list-item">
+                                        Launch of ZNS Mainnet
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="info__item info-item">
+                                <p class="info-item__count">
+                                    3
+                                </p>
+                                <p class="info-item__text">
+                                    Q1 2024
+                                </p>
+                                <ul class="info-item__list">
+                                    <li class="info-item__list-item">
+                                        Collaborate with decentralized finance (DeFi) platforms
+                                    </li>
+                                    <li class="info-item__list-item">
+                                        Enable the use of ZNS domains for various DeFi applications
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="info__item info-item">
+                                <p class="info-item__count">
+                                    5
+                                </p>
+                                <p class="info-item__text">
+                                    2024-25
+                                </p>
+                                <ul class="info-item__list">
+                                    <li class="info-item__list-item">
+                                        Cross-Chain NFT Integration
+                                    </li>
+                                    <li class="info-item__list-item">
+                                        ENS Integration
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="info__line">
+                            <span>
+
+                            </span>
+                            <span>
+
+                            </span>
+                            <span>
+
+                            </span>
+                            <span>
+
+                            </span>
+                            <span>
+
+                            </span>
+                            <span>
+
+                            </span>
+                        </div>
+                        <div class="info__wrapper">
+                            <div class="info__item info-item">
+                                <p class="info-item__count">
+                                    2
+                                </p>
+                                <p class="info-item__text">
+                                    Q4 2023
+                                </p>
+                                <ul class="info-item__list">
+                                    <li class="info-item__list-item">
+                                        Launch of ZNS Mainnet
+                                    </li>
+                                    <li class="info-item__list-item">
+                                        Enable cross-chain functionality
+                                    </li>
+                                    <li class="info-item__list-item">
+                                        ZNS across multiple blockchain networks
+                                    </li>
+                                    <li class="info-item__list-item">
+                                        Launch token
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="info__item info-item">
+                                <p class="info-item__count">
+                                    4
+                                </p>
+                                <p class="info-item__text">
+                                    Q2 2024
+                                </p>
+                                <ul class="info-item__list">
+                                    <li class="info-item__list-item">
+                                        Launching NFT Marketplace
+                                    </li>
+                                    <li class="info-item__list-item">
+                                        DAO membership for token holders
+                                    </li>
+                                </ul>
+                            </div>                  
+                        </div>
+                    </div>
+                    <div class="info__socials info-socials">
+                        <a class="info-socials__item" href="#">
+                            <div class="info-socials__item-icon">
+                                <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g filter="url(#filter0_i_213_33)">
+                                        <path
+                                            d="M20.2984 5.1029C22.8305 8.8521 24.081 13.0811 23.6135 17.9496C23.6116 17.9702 23.6009 17.9891 23.5841 18.0016C21.6666 19.4195 19.8088 20.28 17.9771 20.8507C17.9629 20.8551 17.9476 20.8548 17.9335 20.85C17.9194 20.8452 17.9071 20.8361 17.8984 20.8239C17.4752 20.2309 17.0907 19.6058 16.7538 18.9493C16.7345 18.9106 16.7522 18.8641 16.792 18.8488C17.4026 18.6171 17.9833 18.3394 18.5418 18.0106C18.5858 17.9846 18.5886 17.9211 18.548 17.8906C18.4295 17.802 18.312 17.7089 18.1997 17.6157C18.1786 17.5985 18.1503 17.5951 18.1265 17.6067C14.5004 19.2931 10.5281 19.2931 6.85907 17.6067C6.83525 17.596 6.80695 17.5997 6.78649 17.6166C6.67439 17.7097 6.55669 17.802 6.43926 17.8906C6.39862 17.9211 6.40199 17.9846 6.44627 18.0106C7.0048 18.3332 7.58548 18.6171 8.1953 18.8499C8.23482 18.8652 8.2536 18.9106 8.23398 18.9493C7.90441 19.6066 7.5199 20.2318 7.08888 20.8247C7.0701 20.8487 7.03927 20.8597 7.01013 20.8507C5.18711 20.28 3.32933 19.4195 1.41186 18.0016C1.39589 17.9891 1.3844 17.9694 1.38272 17.9488C0.992051 13.7376 1.78824 9.47358 4.69471 5.10206C4.70171 5.09048 4.71236 5.08145 4.72469 5.07609C6.15481 4.4151 7.68693 3.92881 9.28828 3.65109C9.31742 3.64658 9.34657 3.66012 9.3617 3.68609C9.55956 4.03888 9.78572 4.4913 9.93874 4.86103C11.6267 4.60137 13.341 4.60137 15.0642 4.86103C15.2172 4.4992 15.4356 4.03888 15.6326 3.68609C15.6396 3.67321 15.6505 3.66289 15.6636 3.6566C15.6768 3.65032 15.6917 3.64839 15.706 3.65109C17.3082 3.92966 18.8403 4.41595 20.2693 5.07609C20.2819 5.08145 20.2923 5.09048 20.2984 5.1029ZM10.7969 13.1099C10.8145 11.8649 9.91323 10.8348 8.78187 10.8348C7.65975 10.8348 6.76715 11.8559 6.76715 13.1099C6.76715 14.3636 7.6774 15.3847 8.78187 15.3847C9.90427 15.3847 10.7969 14.3636 10.7969 13.1099ZM18.2465 13.1099C18.2641 11.8649 17.3628 10.8348 16.2317 10.8348C15.1093 10.8348 14.2167 11.8559 14.2167 13.1099C14.2167 14.3636 15.127 15.3847 16.2317 15.3847C17.3628 15.3847 18.2465 14.3636 18.2465 13.1099Z"
+                                            fill="white" />
+                                    </g>
+                                    <defs>
+                                        <filter id="filter0_i_213_33" x="0.700012" y="0.699951" width="23.6"
+                                            height="24.1" filterUnits="userSpaceOnUse"
+                                            color-interpolation-filters="sRGB">
+                                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix"
+                                                result="shape" />
+                                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                            <feOffset dy="0.5" />
+                                            <feGaussianBlur stdDeviation="1.25" />
+                                            <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
+                                            <feColorMatrix type="matrix"
+                                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
+                                            <feBlend mode="normal" in2="shape" result="effect1_innerShadow_213_33" />
+                                        </filter>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <p class="info-socials__item-text">
+                                Join Discord
+                            </p>
+                        </a>
+                        <a class="info-socials__item" href="#">
+                            <div class="info-socials__item-icon">
+                                <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_213_151)" filter="url(#filter0_i_213_151)">
+                                        <path
+                                            d="M27.3619 5.92148C26.5031 6.29142 25.6002 6.54902 24.6756 6.68792C25.1078 6.61375 25.7439 5.83494 25.9971 5.51971C26.3818 5.04422 26.6749 4.5014 26.8617 3.91883C26.8617 3.87557 26.9049 3.81376 26.8617 3.78285C26.8399 3.77095 26.8155 3.76471 26.7907 3.76471C26.7659 3.76471 26.7414 3.77095 26.7197 3.78285C25.7156 4.32704 24.6471 4.74238 23.5393 5.01905C23.5007 5.03086 23.4596 5.03192 23.4204 5.02212C23.3812 5.01232 23.3455 4.99203 23.3169 4.96342C23.2307 4.86065 23.1379 4.76361 23.0391 4.67292C22.5872 4.26772 22.0746 3.93608 21.5199 3.69014C20.7711 3.38268 19.9624 3.24953 19.1547 3.30073C18.3709 3.35027 17.6058 3.56067 16.9068 3.91883C16.2184 4.29645 15.6135 4.80944 15.1282 5.427C14.6178 6.06262 14.2493 6.80028 14.0475 7.59035C13.8811 8.34187 13.8622 9.11859 13.9919 9.87732C13.9919 10.0071 13.9919 10.0257 13.8808 10.0071C9.47763 9.35812 5.86495 7.79432 2.91306 4.43804C2.78337 4.28969 2.71544 4.28969 2.61046 4.43804C1.32595 6.39123 1.94968 9.48173 3.55531 11.0084C3.77145 11.2124 3.99377 11.4102 4.22844 11.5956C3.49227 11.5433 2.77408 11.3437 2.11642 11.0084C1.99291 10.9281 1.92498 10.9714 1.9188 11.1197C1.90129 11.3254 1.90129 11.5321 1.9188 11.7378C2.04766 12.7234 2.43574 13.6571 3.04336 14.4434C3.65098 15.2296 4.45634 15.8403 5.37709 16.2128C5.60154 16.3091 5.83542 16.3816 6.07492 16.4292C5.3934 16.5635 4.69443 16.5844 4.00612 16.491C3.85791 16.4601 3.80233 16.5404 3.85791 16.6826C4.76571 19.155 6.7357 19.9091 8.18077 20.3294C8.37839 20.3603 8.576 20.3603 8.79832 20.4097C8.79832 20.4097 8.79832 20.4097 8.76127 20.4468C8.33516 21.2256 6.61219 21.751 5.82172 22.023C4.37892 22.5417 2.84063 22.74 1.3136 22.604C1.07275 22.5669 1.01717 22.5731 0.95542 22.604C0.893665 22.6349 0.95542 22.7029 1.02335 22.7647C1.33213 22.9687 1.6409 23.1479 1.96203 23.321C2.91803 23.8429 3.92871 24.2575 4.97568 24.5572C10.3978 26.053 16.4992 24.9528 20.5688 20.9042C23.7678 17.7272 24.8917 13.3449 24.8917 8.95635C24.8917 8.78946 25.0955 8.69057 25.2128 8.60403C26.0221 7.97289 26.7356 7.22752 27.331 6.39123C27.4341 6.26657 27.487 6.10785 27.4792 5.9462C27.4792 5.85349 27.4792 5.87203 27.3619 5.92148Z"
+                                            fill="white" />
+                                    </g>
+                                    <defs>
+                                        <filter id="filter0_i_213_151" x="0.929993" y="0.930054" width="26.55"
+                                            height="27.05" filterUnits="userSpaceOnUse"
+                                            color-interpolation-filters="sRGB">
+                                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix"
+                                                result="shape" />
+                                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                            <feOffset dy="0.5" />
+                                            <feGaussianBlur stdDeviation="1.25" />
+                                            <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
+                                            <feColorMatrix type="matrix"
+                                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
+                                            <feBlend mode="normal" in2="shape" result="effect1_innerShadow_213_151" />
+                                        </filter>
+                                        <clipPath id="clip0_213_151">
+                                            <rect width="26.55" height="26.55" fill="white"
+                                                transform="translate(0.929993 0.930054)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <p class="info-socials__item-text">
+                                Join Twitter
+                            </p>
+                        </a>
+                        <a class="info-socials__item" href="#">
+                            <div class="info-socials__item-icon">
+                                <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <g filter="url(#filter0_i_213_45)">
+                                        <path
+                                            d="M4.14689 13.0635C4.14689 13.0635 14.5846 8.43447 18.2046 6.80448C19.5923 6.15254 24.2983 4.06615 24.2983 4.06615C24.2983 4.06615 26.4703 3.15343 26.2893 5.37012C26.2289 6.28293 25.7463 9.47758 25.2636 12.9331C24.5396 17.823 23.7553 23.1692 23.7553 23.1692C23.7553 23.1692 23.6346 24.6688 22.609 24.9295C21.5833 25.1903 19.8939 24.0168 19.5923 23.756C19.3509 23.5604 15.0672 20.6265 13.4986 19.1921C13.0762 18.8009 12.5936 18.0186 13.5589 17.1058C15.7309 14.9543 18.3252 12.2812 19.8939 10.586C20.6179 9.8036 21.3419 7.97807 18.3252 10.1948C14.0416 13.3895 9.81824 16.3886 9.81824 16.3886C9.81824 16.3886 8.85288 17.0406 7.0429 16.4538C5.23283 15.8671 3.12115 15.0846 3.12115 15.0846C3.12115 15.0846 1.67323 14.1067 4.14689 13.0635Z"
+                                            fill="white" />
+                                    </g>
+                                    <defs>
+                                        <filter id="filter0_i_213_45" x="0.929993" y="0.930054" width="26.55"
+                                            height="27.05" filterUnits="userSpaceOnUse"
+                                            color-interpolation-filters="sRGB">
+                                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                            <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix"
+                                                result="shape" />
+                                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                            <feOffset dy="0.5" />
+                                            <feGaussianBlur stdDeviation="1.25" />
+                                            <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1" />
+                                            <feColorMatrix type="matrix"
+                                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.1 0" />
+                                            <feBlend mode="normal" in2="shape" result="effect1_innerShadow_213_45" />
+                                        </filter>
+                                    </defs>
+                                </svg>
+                            </div>
+                            <p class="info-socials__item-text">
+                                Join Telegram
+                            </p>
+                        </a>
+                    </div>
+                    <div class="info__subscribe info-subscribe">
+                        <h3 class="info-subscribe__title">
+                            Never miss
+                        </h3>
+                        <p class="info-subscribe__text">
+                            Subscribe to get trending news from ZNS
+                        </p>
+                        <form class="info-subscribe__form" action="#">
+                            <input class="info-subscribe__form-input" type="text" placeholder="Enter your email">
+                            <button class="info-subscribe__form-btn" type="submit">
+                                Subscribe
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">
@@ -924,7 +1153,7 @@
                     © 2023 ZNS All rights reserved.
                 </p>
             </div>
-        </footer> 
+        </footer>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
