--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">
+                            <a class="menu__list-link" href="#secion-top">
                                 Home
                             </a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">
+                            <a class="menu__list-link" href="#register">
                                 Register
                             </a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">
+                            <a class="menu__list-link" href="#creators">
                                 Names
                             </a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">
+                            <a class="menu__list-link" href="#about">
                                 Use Cases
                             </a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">
+                            <a class="menu__list-link" href="#service">
                                 Socials
                             </a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#">
+                            <a class="menu__list-link" href="#info">
                                 Whitepaper
                             </a>
                         </li>
@@ -76,7 +76,7 @@
 
     <div class="wrapper">
         <main class="main">
-            <section class="main__secion-top secion-top">
+            <section class="main__secion-top secion-top" id="secion-top">
                 <div class="container">
                     <div class="secion-top__inner">
                         <div class="secion-top__body secion-top-body">
@@ -147,7 +147,7 @@
                     </div>
                 </div>
             </section>
-            <section class="main__register register">
+            <section class="main__register register" id="register">
                 <div class="container">
                     <h2 class="register__title title">
                         Register a Domain
@@ -595,7 +595,7 @@
                     </div>
                 </div>
             </section>
-            <section class="main__creators creators">
+            <section class="main__creators creators" id="creators">
                 <div class="container">
                     <h2 class="creators__title title">
                         Names as NFTs
@@ -730,7 +730,7 @@
                     </a>
                 </div>
             </section>
-            <section class="main__about about">
+            <section class="main__about about" id="about">
                 <div class="container">
                     <h2 class="about__title title">
                         Use Cases
@@ -791,7 +791,7 @@
                     </div>
                 </div>
             </section>
-            <section class="main__service service">
+            <section class="main__service service" id="service">
                 <div class="container">
                     <h2 class="service__title title">
                         Zetachain Name Service
@@ -801,7 +801,7 @@
                     </div>
                 </div>
             </section>
-            <section class="main__info info">
+            <section class="main__info info" id="info">
                 <div class="container">
                     <div class="info__inner">
                         <div class="info__wrapper">
