--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="images/fav-icon.png" type="image/png">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,18 +46,23 @@
                             </a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#service">
+                            <a class="menu__list-link" href="#info">
+                                Road Map
+                            </a>
+                        </li>
+                        <li class="menu__list-item">
+                            <a class="menu__list-link" href="#socials">
                                 Socials
                             </a>
                         </li>
                         <li class="menu__list-item">
-                            <a class="menu__list-link" href="#info">
+                            <a class="menu__list-link" download="ZNS Whitepaper.pdf" href="files/ZNS Whitepaper.pdf">
                                 Whitepaper
                             </a>
                         </li>
                     </ul>
                 </nav>
-                <a class="header__link btn" href="#">
+                <a class="header__link btn" href="https://zetachain-name-service.gitbook.io/zns/app-prototype">
                     run APP
                 </a>
                 <button class="header__burger" type="button">
@@ -87,11 +93,11 @@
                                 The decentralized name service for linking Zetachain
                             </p>
                             <div class="secion-top-body__buttons">
-                                <a class="secion-top-body__buttons-link btn" href="#">
+                                <a class="secion-top-body__buttons-link btn" href="https://zetachain-name-service.gitbook.io/zns/app-prototype">
                                     RUN
                                 </a>
-                                <a class="secion-top-body__buttons-link" href="#">
-                                    APP
+                                <a class="secion-top-body__buttons-link" href="https://cutt.ly/ewwGXo9p">
+                                    Book Domain 
                                 </a>
                             </div>
                             <ul class="secion-top-body__list secion-top-body-list">
@@ -362,12 +368,13 @@
                                         </a>
                                     </div>
                                 </div>
+
                                 <div class="register-swiper__slide register-slide swiper-slide">
                                     <div class="register-slide__box">
-                                        <img class="register-slide__box-image" src="images/register-img-1.jpg" alt="#">
+                                        <img class="register-slide__box-image" src="images/register-img-5.jpg" alt="#">
                                         <img class="register-slide__box-img" src="images/logo-icon.svg" alt="logo">
                                         <a class="register-slide__box-btn btn" href="#">
-                                            eth.zeta
+                                         dior.zeta
                                         </a>
                                         <div class="register-slide__box-info">
                                             <p class="register-slide__box-info-text">
@@ -380,12 +387,12 @@
                                     </div>
                                     <div class="register-slide__body register-slide-body">
                                         <h4 class="register-slide-body__title">
-                                            eth.zeta
+                                            dior.zeta
                                         </h4>
                                         <p class="register-slide-body__text">
                                             Creator
                                             <span>
-                                                ..8964e
+                                                ..4564e
                                             </span>
                                         </p>
                                         <div class="register-slide-body__bottom">
@@ -419,7 +426,7 @@
                                                     </defs>
                                                 </svg>
                                                 <span>
-                                                    1.009
+                                                    2.001 
                                                 </span>
                                                 <span>
                                                     ETH
@@ -433,10 +440,10 @@
                                 </div>
                                 <div class="register-swiper__slide register-slide swiper-slide">
                                     <div class="register-slide__box">
-                                        <img class="register-slide__box-image" src="images/register-img-2.jpg" alt="#">
+                                        <img class="register-slide__box-image" src="images/register-img-4.jpg" alt="#">
                                         <img class="register-slide__box-img" src="images/logo-icon.svg" alt="logo">
                                         <a class="register-slide__box-btn btn" href="#">
-                                            mask.zeta
+                                            bull.zeta
                                         </a>
                                         <div class="register-slide__box-info">
                                             <p class="register-slide__box-info-text">
@@ -449,12 +456,12 @@
                                     </div>
                                     <div class="register-slide__body register-slide-body">
                                         <h4 class="register-slide-body__title">
-                                            mask.zeta
+                                            bull.zeta
                                         </h4>
                                         <p class="register-slide-body__text">
                                             Creator
                                             <span>
-                                                ...B267e
+                                                ...a897e
                                             </span>
                                         </p>
                                         <div class="register-slide-body__bottom">
@@ -488,7 +495,7 @@
                                                     </defs>
                                                 </svg>
                                                 <span>
-                                                    2.1
+                                                    0.901 
                                                 </span>
                                                 <span>
                                                     ETH
@@ -502,10 +509,10 @@
                                 </div>
                                 <div class="register-swiper__slide register-slide register-slide--active swiper-slide">
                                     <div class="register-slide__box">
-                                        <img class="register-slide__box-image" src="images/register-img-3.jpg" alt="#">
+                                        <img class="register-slide__box-image" src="images/register-img-6.jpg" alt="#">
                                         <img class="register-slide__box-img" src="images/logo-icon.svg" alt="logo">
                                         <a class="register-slide__box-btn btn" href="#">
-                                            bitcoin.zeta
+                                            777.zeta
                                         </a>
                                         <div class="register-slide__box-info">
                                             <p class="register-slide__box-info-text">
@@ -518,12 +525,12 @@
                                     </div>
                                     <div class="register-slide__body register-slide-body">
                                         <h4 class="register-slide-body__title">
-                                            bitcoin.zeta
+                                            777.zeta
                                         </h4>
                                         <p class="register-slide-body__text">
                                             Creator
                                             <span>
-                                                ...a157A
+                                                ...a868A
                                             </span>
                                         </p>
                                         <div class="register-slide-body__bottom">
@@ -557,7 +564,7 @@
                                                     </defs>
                                                 </svg>
                                                 <span>
-                                                    29.01
+                                                    2.018 
                                                 </span>
                                                 <span>
                                                     ETH
@@ -725,7 +732,7 @@
                             </div>
                         </li>
                     </ul>
-                    <a class="creators__link btn" href="#">
+                    <a class="creators__link btn" href="https://zetachain-name-service.gitbook.io/zns/app-prototype">
                         Launch APP
                     </a>
                 </div>
@@ -910,8 +917,8 @@
                             </span>
                         </div>
                     </div>
-                    <div class="info__socials info-socials">
-                        <a class="info-socials__item" href="#">
+                    <div class="info__socials info-socials" id="socials">
+                        <a class="info-socials__item" href="https://discord.gg/skbA5Ucmmc ">
                             <div class="info-socials__item-icon">
                                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -943,7 +950,7 @@
                                 Join Discord
                             </p>
                         </a>
-                        <a class="info-socials__item" href="#">
+                        <a class="info-socials__item" href="https://twitter.com/ZetaChain_NS ">
                             <div class="info-socials__item-icon">
                                 <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -979,7 +986,7 @@
                                 Join Twitter
                             </p>
                         </a>
-                        <a class="info-socials__item" href="#">
+                        <a class="info-socials__item" href="https://t.me/zetachain_domains">
                             <div class="info-socials__item-icon">
                                 <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -1021,9 +1028,9 @@
                         </p>
                         <form class="info-subscribe__form" action="#">
                             <input class="info-subscribe__form-input" type="text" placeholder="Enter your email">
-                            <button class="info-subscribe__form-btn" type="submit">
+                            <a class="info-subscribe__form-btn" href="https://cutt.ly/ewwGXo9p">
                                 Subscribe
-                            </button>
+                            </a>
                         </form>
                     </div>
                 </div>
@@ -1056,27 +1063,27 @@
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="https://medium.com/@zetachainid">
                                     Blog
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="https://zetachain-name-service.gitbook.io/zns/">
                                     Gitbook
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="https://guild.xyz/zetachain-name-service">
                                     Join ZNS Guild
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="#secion-top">
                                     Galxe Campaign
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="mailto:info@zetachain.id">
                                     Contact us
                                 </a>
                             </li>
@@ -1088,38 +1095,38 @@
                                 </h4>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="#secion-top">
                                     Home
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="#register">
                                     Register
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="#creators">
                                     Names
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="#about">
                                     Use Cases
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" href="#socials">
                                     Socials
                                 </a>
                             </li>
                             <li class="footer-menu__list-item">
-                                <a class="footer-menu__list-link" href="#">
+                                <a class="footer-menu__list-link" download="ZNS Whitepaper.pdf" href="files/ZNS Whitepaper.pdf">
                                     Whitepaper
                                 </a>
                             </li>
                         </ul>
                     </nav>
-                    <div class="footer__column footer-column">
+                    <!-- <div class="footer__column footer-column">
                         <h4 class="footer-column__title">
                             Stay up to date
                         </h4>
@@ -1145,7 +1152,7 @@
                         <a class="footer-column__link btn" href="#">
                             run APP
                         </a>
-                    </div>
+                    </div> -->
                 </div>
                 <p class="footer__copy">
                     © 2023 ZNS All rights reserved.
